 15.11.2002
************************************************************************************************

The stations users navigation panel has been developed massively. Page Splitting has been
introduced 'software wide'. The interface has been adopted to allow sorting data by columns
in either ascending or descending order. JavaScript added to support user deletion. The last
admin user will not be deleted from the list.


************************************************************************************************
 14.11.2002
************************************************************************************************

All the user actions are from now on logged in the database. This can be easily disabled from
the config file if needed.

The database has been developed further to support multiple users, series and programmes.

Calendar has been linked to the database. From now on, all the days that have at least one
programme associated with them will be maked with a small red box on the calendar display.


************************************************************************************************
 13.11.2002
************************************************************************************************

Database Structure Development. Land File Filled massively with menu onformation. Additional
Templates developed for User Access management and User Settings Management.
Template developement started for Series Overview Management.


************************************************************************************************
 12.11.2002
************************************************************************************************

A lot of minor bugs fixed that had to do with user object initialization. Calendar classe fully
adopted to new interface. Hierachichal menues have been developed. Object destroyer set it
action (currently user for loggin out). Minor changes in design.
Added special program tags (need assistance and pre-produced)
